--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jwt-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "daffamfzn",
